# ipp-spellchecker

./: .gitignore
src/: CMakeLists.txt  Doxyfile.in  Doxygen.in  MainPage.dox  conf.h.in  testable.c  testable.h
src/dict-check/: dict-check.c
src/dict-editor/: CMakeLists.txt  dict-editor.c
src/dictionary/: CMakeLists.txt  charmap.c  charmap.h  charmap_test.c  dictionary.c  dictionary.cpp  dictionary.h  dictionary_test.c  list.c  list.h  list_test.c  rule.c  rule.h  rule_test.c  serialization.c  serialization.h  str.c  str.h  trie.c  trie.h  trie_test.c  word_list.c  word_list.h  word_list_test.c
src/dictionary_test/: CMakeLists.txt  dictionary_test.c
src/gtk-editor/: CMakeLists.txt  editor.c  editor.h  extra.c  file.c  find.c  menu.c
src/pydict/: CMakeLists.txt  wrapper.cpp
tests/dict-editor/: test.sh  test0.in  test0.out
